--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,4 +1,4 @@
 <div layout-padding layout-margin layout-fill layout="column" layout-align="center center">
-  <div ui-view="menu_bar"></div>
+  <div ui-view="menubar"></div>
   <div ui-view="body"></div>
 </div>
