--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -1,15 +1,17 @@
-<div ng-controller="AppCtrl" ng-cloak="" class="navBardemoBasicUsage" ng-app="MyApp">
-<md-content class="md-padding">
-  <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
-    <md-nav-item md-nav-click="goto('page1')" name="page1">Page One</md-nav-item>
-    <md-nav-item md-nav-click="goto('page2')" name="page2">Page Two</md-nav-item>
-    <md-nav-item md-nav-click="goto('page3')" name="page3">Page Three</md-nav-item>
-    <!-- these require actual routing with ui-router or ng-route, so they won't work in the demo
-    <md-nav-item md-nav-sref="app.page4" name="page4">Page Four</md-nav-item>
-    <md-nav-item md-nav-href="#page5" name="page5">Page Five</md-nav-item>
-    -->
-  </md-nav-bar>
-  <div class="ext-content">
-    External content for `<span>{{currentNavItem}}</span>`
-  </div>
-</md-content></div>
+<md-toolbar>
+      <div class="md-toolbar-tools">
+        <md-button aria-label="Go Back">
+          Go Back
+        </md-button>
+        <h2>
+          <span>Toolbar with Standard Buttons</span>
+        </h2>
+        <span flex></span>
+        <md-button class="md-raised" aria-label="Learn More">
+          Learn More
+        </md-button>
+        <md-button class="md-fab md-mini" aria-label="Favorite">
+          <md-icon md-svg-icon="img/icons/favorite.svg"></md-icon>
+        </md-button>
+      </div>
+    </md-toolbar>
