--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div layout-padding layout-margin layout-fill layout="column" layout-align="center center">
-  <ui-view></ui-view>
+<div layout-fill layout="row" layout-align="center center">
+  <ui-view layout-fill></ui-view>
 </div>
