--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,14 @@
-<div ng-cloak>
-  <md-content>
-    <md-tabs md-dynamic-height md-border-bottom>
-      <md-tab label="Current User">
-        <md-content>
-          <current></current>
-        </md-content>
-      </md-tab>
-      <md-tab label="New User">
-        <md-content>
-          <newuser></newuser>
-        </md-content>
-      </md-tab>
-    </md-tabs>
-  </md-content>
-</div>
+<md-content layout-align="center center" layout="column" layout-fill>
+  <md-tabs md-dynamic-height md-border-bottom>
+    <md-tab label="Current User">
+      <md-content>
+        <current></current>
+      </md-content>
+    </md-tab>
+    <md-tab label="New User">
+      <md-content>
+        <newuser></newuser>
+      </md-content>
+    </md-tab>
+  </md-tabs>
+</md-content>
