--- a/src/app/login/newUser/newuser.component.html
+++ b/src/app/login/newUser/newuser.component.html
@@ -1,29 +1,37 @@
 <md-card>
   <md-card-actions>
-    <md-input-container flex>
-      <label>First Name</label>
-      <input type="text" ng-model="$log.firstName"/>
-    </md-input-container>
-    <md-input-container flex>
-      <label>Last Name</label>
-      <input type="text" ng-model="$log.lastName"/>
-    </md-input-container>
-    <md-input-container flex>
-      <label>Username</label>
-      <input type="text" ng-model="$log.username"/>
-    </md-input-container>
-    <md-input-container flex>
-      <label>Password</label>
-      <input type="text" ng-model="$log.password"/>
-    </md-input-container>
-    <md-input-container flex>
-      <label>Email</label>
-      <input type="text" ng-model="$log.email"/>
-    </md-input-container>
-    <md-input-container flex>
-      <label>Phone</label>
-      <input type="text" ng-model="$log.phone"/>
-    </md-input-container>
-    <md-button >Create</md-button>
+    <div>
+      <md-input-container>
+        <label>First Name</label>
+        <input type="text" ng-model="$log.firstName"/>
+      </md-input-container>
+      <md-input-container>
+        <label>Last Name</label>
+        <input type="text" ng-model="$log.lastName"/>
+      </md-input-container>
+    </div>
+    <div>
+      <md-input-container>
+        <label>Username</label>
+        <input type="text" ng-model="$log.username"/>
+      </md-input-container>
+      <md-input-container>
+        <label>Password</label>
+        <input type="text" ng-model="$log.password"/>
+      </md-input-container>
+    </div>
+    <div>
+      <md-input-container>
+        <label>Email</label>
+        <input type="text" ng-model="$log.email"/>
+      </md-input-container>
+      <md-input-container>
+        <label>Phone</label>
+        <input type="text" ng-model="$log.phone"/>
+      </md-input-container>
+    </div>
+    <div align="center">
+      <md-button >Create</md-button>
+    </div>
   </md-card-actions>
 </md-card>
