--- a/src/app/login/newUser/newuser.component.html
+++ b/src/app/login/newUser/newuser.component.html
@@ -31,7 +31,7 @@
       </md-input-container>
     </div>
     <div align="center">
-      <md-button >Create</md-button>
+      <md-button class="md-raised md-primary" layout-fill>Create</md-button>
     </div>
   </md-card-actions>
 </md-card>
