--- a/src/app/login/newUser/newuser.component.html
+++ b/src/app/login/newUser/newuser.component.html
@@ -3,35 +3,35 @@
     <div>
       <md-input-container>
         <label>First Name</label>
-        <input type="text" ng-model="$log.firstName"/>
+        <input type="text" ng-model="$newuser.$authenticate.firstName"/>
       </md-input-container>
       <md-input-container>
         <label>Last Name</label>
-        <input type="text" ng-model="$log.lastName"/>
+        <input type="text" ng-model="$newuser.$authenticate.lastName"/>
       </md-input-container>
     </div>
     <div>
       <md-input-container>
         <label>Username</label>
-        <input type="text" ng-model="$log.username"/>
+        <input type="text" ng-model="$newuser.$authenticate.username"/>
       </md-input-container>
       <md-input-container>
         <label>Password</label>
-        <input type="text" ng-model="$log.password"/>
+        <input type="text" ng-model="$newuser.$authenticate.password"/>
       </md-input-container>
     </div>
     <div>
       <md-input-container>
         <label>Email</label>
-        <input type="text" ng-model="$log.email"/>
+        <input type="text" ng-model="$newuser.$authenticate.email"/>
       </md-input-container>
       <md-input-container>
         <label>Phone</label>
-        <input type="text" ng-model="$log.phone"/>
+        <input type="text" ng-model="$newuser.$authenticate.phone"/>
       </md-input-container>
     </div>
     <div align="center">
-      <md-button class="md-raised md-primary" layout-fill>Create</md-button>
+      <md-button class="md-raised md-primary" ng-click="$newuser.create()" layout-fill>Create</md-button>
     </div>
   </md-card-actions>
 </md-card>
