--- a/src/app/login/current/current.component.html
+++ b/src/app/login/current/current.component.html
@@ -1,17 +1,22 @@
 <md-card>
   <md-card-actions>
-    <div>
-      <md-input-container flex>
-        <label>Username</label>
-        <input type="text" ng-model="$current.$authenticate.username"/>
-      </md-input-container>
-      <md-input-container flex>
-        <label>Password</label>
-        <input type="text" ng-model="$current.$authenticate.password"/>
-      </md-input-container>
-    </div>
-    <div>
-      <md-button class="md-raised md-primary" ng-click="$current.login()" layout-fill>Login</md-button>
-    </div>
+    <form name="loginForm">
+      <div>
+        <md-input-container flex>
+          <label>Username</label>
+          <input type="text" ng-model="$current.$authenticate.username" name="username"required/>
+        </md-input-container>
+        <md-input-container flex>
+          <label>Password</label>
+          <input type="text" ng-model="$current.$authenticate.password" required/>
+        </md-input-container>
+      </div>
+      <div>
+        <md-button type="submit" class="md-raised md-primary" ng-click="$current.login()" layout-fill>Login</md-button>
+        <div ng-show="$current.$authenticate.incorrectUser" class="error">
+          *Username and/or password are incorrect
+        </div>
+      </div>
+    </form>
   </md-card-actions>
 </md-card>
