--- a/src/app/login/newUser/newuser.component.html
+++ b/src/app/login/newUser/newuser.component.html
@@ -1,37 +1,42 @@
 <md-card>
   <md-card-actions>
-    <div>
-      <md-input-container>
-        <label>First Name</label>
-        <input type="text" ng-model="$newuser.$authenticate.firstName"/>
-      </md-input-container>
-      <md-input-container>
-        <label>Last Name</label>
-        <input type="text" ng-model="$newuser.$authenticate.lastName"/>
-      </md-input-container>
-    </div>
-    <div>
-      <md-input-container>
-        <label>Username</label>
-        <input type="text" ng-model="$newuser.$authenticate.username"/>
-      </md-input-container>
-      <md-input-container>
-        <label>Password</label>
-        <input type="text" ng-model="$newuser.$authenticate.password"/>
-      </md-input-container>
-    </div>
-    <div>
-      <md-input-container>
-        <label>Email</label>
-        <input type="text" ng-model="$newuser.$authenticate.email"/>
-      </md-input-container>
-      <md-input-container>
-        <label>Phone</label>
-        <input type="text" ng-model="$newuser.$authenticate.phone"/>
-      </md-input-container>
-    </div>
-    <div align="center">
-      <md-button class="md-raised md-primary" ng-click="$newuser.create()" layout-fill>Create</md-button>
-    </div>
+    <form name=createUserForm>
+      <div>
+        <md-input-container>
+          <label>First Name</label>
+          <input type="text" ng-model="$newuser.$authenticate.firstName"/>
+        </md-input-container>
+        <md-input-container>
+          <label>Last Name</label>
+          <input type="text" ng-model="$newuser.$authenticate.lastName"/>
+        </md-input-container>
+      </div>
+      <div>
+        <md-input-container>
+          <label>Username</label>
+          <input type="text" ng-model="$newuser.$authenticate.username" ng-blur="$newuser.validateUsername()" required/>
+          <div ng-show='$newuser.$authenticate.invalidUsername' class="error">
+            *Username is already taken
+          </div>
+        </md-input-container>
+        <md-input-container>
+          <label>Password</label>
+          <input type="text" ng-model="$newuser.$authenticate.password" required/>
+        </md-input-container>
+      </div>
+      <div>
+        <md-input-container>
+          <label>Email</label>
+          <input type="text" ng-model="$newuser.$authenticate.email" required/>
+        </md-input-container>
+        <md-input-container>
+          <label>Phone</label>
+          <input type="text" ng-model="$newuser.$authenticate.phone"/>
+        </md-input-container>
+      </div>
+      <div align="center">
+        <md-button class="md-raised md-primary" type="submit" ng-click="$newuser.create()" layout-fill>Create</md-button>
+      </div>
+    </form>
   </md-card-actions>
 </md-card>
