--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -1,11 +1,8 @@
-<div ng-cloak="" class="tabsdemoDynamicHeight pageWidth pageHeight" ng-app="MyApp">
-  <md-content>
-    <md-tabs md-dynamic-height="" md-border-bottom="">
-      <md-tab label="Your feeds">
-        <md-content class="md-padding">
-          <h1 class="md-display-2"></h1>
-        </md-content>
-      </md-tab>
-    </md-tabs>
-  </md-content>
-</div>
+<md-content layout-align="center center" layout="column" layout-fill class="ocean-background">
+
+      <md-label>Current Feeds</md-label>
+      <!-- <md-body>
+        <feed></feed>
+      </md-body> -->
+
+</md-content>
