--- a/src/app/mainpage/page/page.component.html
+++ b/src/app/mainpage/page/page.component.html
@@ -1,4 +1,4 @@
-<div ng-cloak="" class="tabsdemoDynamicHeight pageWidth pageHeight" ng-app="MyApp">
+<!-- <div ng-cloak="" class="tabsdemoDynamicHeight pageWidth pageHeight" ng-app="MyApp">
   <div flex = "20" layout = "column">
   <md-content>
     <md-tabs md-dynamic-height="" md-border-bottom="">
@@ -14,6 +14,8 @@
       </md-tab>
     </md-tabs>
   </md-content>
+</div> -->
+<div flex = "60" layout = "column">
+  <feed></feed>
 </div>
-<ui-view flex = "60" layout = "column"></ui-view>
 </div>
