--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,4 +1,4 @@
 <div layout-fill layout="column" layout-align="center center">
-  <menubar layout-fill></menubar>
-  <div ui-view="body"></div>
+  <menubar flex="20" class="fullWidth"></menubar>
+  <ui-view flex="80"></ui-view>
 </div>
