--- a/src/app/mainpage/search/hashtag/hashtag.component.html
+++ b/src/app/mainpage/search/hashtag/hashtag.component.html
@@ -2,22 +2,16 @@
     <md-list flex="">
       <md-list-item class="md-3-line" ng-repeat="item in results" ng-click="null">
         <div class="md-list-item-text" layout="column">
-          <h1>Main tweet</h1>
-          <h3>Author: {{ item.author.username }}</h3>
-          <p>Content: {{ item.content }}</p>
-          <p>Posted: {{ item.posted }}</p>
-          <div ng-show='item.inReplyTo'>
-            <h2>In reply to: </h2>
-            <h3>Author: {{ item.inReplyTo.author.username }}</h3>
-            <p>Content: {{ item.inReplyTo.content }}</p>
-            <p>Posted: {{ item.inReplyTo.posted }}</p>
+          <h2 ng-click="null">Tweet</h2>
+            <h3 ng-click="null">Author: {{ item.author.username }}</h3>
+            <p>Content: {{ item.content }}</p>
+            <p>Posted: {{ item.posted }}</p>
+            <div ng-show='item.inReplyTo'>
+              <h3 ng-click="null">Reply From</h3>
+            </div>
+            <div ng-show='item.repostOf'>
+              <h3 ng-click="null">Repost Of</h3>
+            </div>
           </div>
-          <div ng-show='item.repostOf'>
-            <h2>Repost of: </h2>
-            <h3>Author: {{ item.repostOf.author.username }}</h3>
-            <p>Content: {{ item.repostOf.content }}</p>
-            <p>Posted: {{ item.repostOf.posted }}</p>
-          </div>
-        </div>
     </md-list>
 </md-card-content>
