--- a/src/app/login/newUser/newuser.component.html
+++ b/src/app/login/newUser/newuser.component.html
@@ -4,11 +4,11 @@
       <div>
         <md-input-container>
           <label>First Name</label>
-          <input type="text" ng-model="$newuser.$authenticate.firstName"/>
+          <input type="text" ng-model="$newuser.$authenticate.profile.firstName"/>
         </md-input-container>
         <md-input-container>
           <label>Last Name</label>
-          <input type="text" ng-model="$newuser.$authenticate.lastName"/>
+          <input type="text" ng-model="$newuser.$authenticate.profile.lastName"/>
         </md-input-container>
       </div>
       <div>
@@ -27,11 +27,11 @@
       <div>
         <md-input-container>
           <label>Email</label>
-          <input type="text" ng-model="$newuser.$authenticate.email" required/>
+          <input type="text" ng-model="$newuser.$authenticate.profile.email" required/>
         </md-input-container>
         <md-input-container>
           <label>Phone</label>
-          <input type="text" ng-model="$newuser.$authenticate.phone"/>
+          <input type="text" ng-model="$newuser.$authenticate.profile.phone"/>
         </md-input-container>
       </div>
       <div align="center">
