solve some html issues

--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -1,8 +1,8 @@
-<md-content layout-align="center center" layout="column" layout-fill class="ocean-background">
 
-      <md-label>Current Feeds</md-label>
-      <!-- <md-body>
-        <feed></feed>
-      </md-body> -->
+<md-card>
+  <md-card-actions>
 
-</md-content>
+          <label>Your Feeds</label>
+
+  </md-card-actions>
+</md-card>
