--- a/src/app/mainpage/page/tweet/tweet.component.html
+++ b/src/app/mainpage/page/tweet/tweet.component.html
@@ -1,10 +1,8 @@
-<md-content layout-align="center center" layout="column" layout-fill class="ocean-background">
-  <md-tabs md-dynamic-height md-border-bottom class="login-tab">
-    <md-tab id="tab1">
-      <md-tab-label>Your Feeds</md-tab-label>
-      <md-tab-body>
-        <tweet></tweet>
-      </md-tab-body>
-    </md-tab>
-  </md-tabs>
-</md-content>
+
+  <md-card>
+    <md-card-actions>
+
+            <label>Tweets</label>
+
+    </md-card-actions>
+  </md-card>
