--- a/src/app/mainpage/page/page.component.html
+++ b/src/app/mainpage/page/page.component.html
@@ -1,4 +1,4 @@
-<!-- <div ng-cloak="" class="tabsdemoDynamicHeight pageWidth pageHeight" ng-app="MyApp">
+<div ng-cloak="" class="tabsdemoDynamicHeight pageWidth pageHeight" ng-app="MyApp" layout = "row">
   <div flex = "20" layout = "column">
   <md-content>
     <md-tabs md-dynamic-height="" md-border-bottom="">
@@ -14,7 +14,7 @@
       </md-tab>
     </md-tabs>
   </md-content>
-</div> -->
+</div>
 <div flex = "60" layout = "column">
   <feed></feed>
 </div>
