--- a/src/app/mainpage/edit/edit.component.html
+++ b/src/app/mainpage/edit/edit.component.html
@@ -4,21 +4,21 @@
       <div>
         <md-input-container>
           <label>First Name</label>
-          <input type="text" ng-model="$edit.$authenticate.firstName"/>
+          <input type="text" ng-model="$edit.$authenticate.profile.firstName"/>
         </md-input-container>
         <md-input-container>
           <label>Last Name</label>
-          <input type="text" ng-model="$edit.$authenticate.lastName"/>
+          <input type="text" ng-model="$edit.$authenticate.profile.lastName"/>
         </md-input-container>
       </div>
       <div>
         <md-input-container>
           <label>Email</label>
-          <input type="text" ng-model="$edit.$authenticate.email" required/>
+          <input type="text" ng-model="$edit.$authenticate.profile.email" required/>
         </md-input-container>
         <md-input-container>
           <label>Phone</label>
-          <input type="text" ng-model="$edit.$authenticate.phone"/>
+          <input type="text" ng-model="$edit.$authenticate.profile.phone"/>
         </md-input-container>
       </div>
       <div align="center">
