--- a/src/main.css
+++ b/src/main.css
@@ -30,10 +30,19 @@ i {
   justify-content: center;
 }
 
+
+.tweetButton:hover {
+    cursor: hand;
+    border-color: rgb(255, 255, 255);
+}
+
 .tweetButton {
-  background-color: rgb(63,81,181);
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  margin-left: 140px;
-  height: 150%;
+  border-color: rgba(255, 255, 255, .5);
+	border-top: 100px solid red;
+	border-left: 50px solid transparent;
+	border-right: 50px solid transparent;
+	height: 0;
+	width: 20%;
+  margin-left: 150%;
+
 }
