the button is now purple.

--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -36,7 +36,7 @@
       <span flex></span>
       <svg width="200" height="200">
         <a xlink:href="http://www.google.com" target="_blank">
-          <polygon points="200,50 170,170 30,170 0,50"/>
+          <polygon stroke="blue" fill="purple" points="200,50 150,150 50,150 0,50"/>
         </a>
       </svg>
       <span flex></span>
