--- a/src/app/mainpage/page/follow/follow.component.html
+++ b/src/app/mainpage/page/follow/follow.component.html
@@ -1,3 +1,14 @@
-<div ng-cloak="" class="tabsdemoDynamicHeight" ng-app="MyApp">
-  <header>asdf</header>
-</div>
+<md-content>
+  <md-tabs md-dynamic-height="" md-border-bottom="">
+    <md-tab label="Follower">
+      <md-content class="md-padding">
+        <h1 class="md-display-2">Followers</h1>
+      </md-content>
+    </md-tab>
+    <md-tab label="Following">
+      <md-content class="md-padding">
+        <h1 class="md-display-2">Following</h1>
+      </md-content>
+    </md-tab>
+  </md-tabs>
+</md-content>
