fixed searchbar underline and changed profile icon

--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -7,8 +7,8 @@
       </md-button>
 
       <md-menu>
-      <md-button aria-label="Open phone interactions menu" class="md-icon-button" ng-click="$menubar.openMenu($mdOpenMenu, $event)">
-        <i class="material-icons">perm_identity</i>
+      <md-button class="md-icon-button" ng-click="$menubar.openMenu($mdOpenMenu, $event)">
+        <i class="material-icons">person</i>
       </md-button>
       <md-menu-content width="4">
         <md-menu-item>
