--- a/src/app/mainpage/search/hashtag/hashtag.component.html
+++ b/src/app/mainpage/search/hashtag/hashtag.component.html
@@ -13,5 +13,6 @@
               <h3 ng-click="null">Repost Of</h3>
             </div>
           </div>
+      </md-list-item>
     </md-list>
 </md-card-content>
