injected searchService to menubar controller

--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -47,7 +47,7 @@
       </md-button>
       <form id="searchInput" autocomplete="off" ng-submit="$menubar.search()">
         <md-input-container md-no-float class="search md-block">
-          <input class="searchInput" placeholder=" Search Twitter" type="text" ng-model="$searchService.searchText" >
+          <input class="searchInput" placeholder=" Search Twitter" type="text" ng-model="$menubar.$searchService.searchText" >
         </md-input-container>
       </form>
     </div>
