--- a/src/main.css
+++ b/src/main.css
@@ -33,7 +33,6 @@ margin-top: 68px;
 
 .search {
   margin-top: 40px;
-  border-radius: 10px;
 }
 
 .tweetButton:hover {
@@ -62,14 +61,8 @@ i {
     border-color: rgb(255, 255, 255);
 }
 
-.tweetButton {
-  border-color: rgba(255, 255, 255, .5);
-	border-top: 100px solid red;
-	border-left: 50px solid transparent;
-	border-right: 50px solid transparent;
-	height: 0;
-	width: 20%;
-  margin-left: 150%;
+.tweetButtonContainer {
+  margin-left: 65px
 }
 
 .SearchTabs {
