added to the search service

--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -23,7 +23,7 @@
       </md-tab-body>
     </md-tab>
     <md-tab id="tab2">
-      <md-tab-label>Username</md-tab-label>
+      <md-tab-label>Author</md-tab-label>
       <md-tab-body>
         <md-list flex="">
           <md-list-item ng-hide="item">No results found</md-list-item>
