--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -1,8 +1,12 @@
-
-<md-card>
-  <md-card-actions>
-
-          <label>Your Feeds</label>
-
-  </md-card-actions>
-</md-card>
+<md-content layout-fill>
+      <md-list flex>
+        <md-subheader class="md-no-sticky">3 line item (with hover)</md-subheader>
+        <md-list-item class="md-3-line" ng-repeat="item in todos" ng-click="null">
+          <div class="md-list-item-text" layout="column">
+            <h3>{{ users.username }}</h3>
+            <h4>{{ users.tweet }}</h4>
+            <p>{{ users.date }}</p>
+          </div>
+        </md-list-item>
+      </md-list>
+    </md-content>
