--- a/src/app/mainpage/page/follow/follow.component.html
+++ b/src/app/mainpage/page/follow/follow.component.html
@@ -1,4 +1,4 @@
-<md-content>
+<md-content layout-fill>
   <md-tabs md-dynamic-height="" md-border-bottom="">
     <md-tab label="Follower">
       <md-content class="md-padding">
