--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -7,6 +7,7 @@
           <md-list-item ng-hide="$search.$searchService.hashtag.data">No results found</md-list-item>
           <md-list-item class="md-3-line" ng-repeat="item in $search.$searchService.hashtag.data">
             <div class="md-list-item-text" layout="column">
+              <h2 ng-hide="$search.$searchService.hashtag.data">No results found</h2>
               <h3 ng-click="null">>{{ item.author.username }}</h3>
               <p>{{ item.content }}</p>
               <p>{{ item.posted }}</p>
