--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -2,14 +2,14 @@
   <md-toolbar class="toolbar" layout="row">
     <div class="md-toolbar-tools">
 
-      <md-button flex="10" class="homeButton md-whiteframe-2dp" ng-click="$menubar.home()">
+      <md-button class="homeButton md-whiteframe-2dp" ng-click="$menubar.home()">
         <i class="material-icons" layout="fill" >home</i>
       </md-button>
 
-      <md-menu flex="10">
-      <md-button class="md-icon-button md-whiteframe-2dp" ng-click="$menubar.openMenu($mdOpenMenu, $event)">
-        <i class="material-icons">person</i>
-      </md-button>
+      <md-menu>
+        <md-button class="md-icon-button md-whiteframe-2dp" ng-click="$menubar.openMenu($mdOpenMenu, $event)">
+          <i class="material-icons">person</i>
+        </md-button>
       <md-menu-content width="4">
         <md-menu-item>
           <md-button ng-click="$menubar.viewProfile()">
@@ -33,23 +33,23 @@
       </md-menu-content>
     </md-menu>
 
-      <span flex></span>
-      <svg class="tweetButtonContainer" width="200" height="200">
-        <g ng-mouseover="$menubar.mouseOnTweet($event)" ng-mouseleave="$menubar.mouseOffTweet($event)">
-          <polygon class="tweetButton" ng-click"$menubar.tweet()" stroke="white" stroke-width="5" fill="rgb(63,81,181)" points="200,50 150,150 50,150 0,50"/>
-          <text id="tweetIcon" class="tweetButton tweetIcon material-icons" ng-click="$menubar.tweet()" x="76" y="135" fill="white" stroke="rgb(63,81,181)">&#xE0E1;</text>
-        </g>
-      </svg>
-      <span flex></span>
+    <span flex></span>
+    <svg class="tweetButtonContainer" ng-click="$menubar.showTweetPrompt($event)" width="200" height="200">
+      <g ng-mouseover="$menubar.mouseOnTweet($event)" ng-mouseleave="$menubar.mouseOffTweet($event)">
+        <polygon class="tweetButton" ng-click"$menubar.tweet()" stroke="white" stroke-width="5" fill="rgb(63,81,181)" points="200,50 150,150 50,150 0,50"/>
+        <text id="tweetIcon" class="tweetButton tweetIcon material-icons" ng-click="$menubar.tweet()" x="76" y="135" fill="white" stroke="rgb(63,81,181)">&#xE0E1;</text>
+      </g>
+    </svg>
+    <span flex></span>
 
-      <md-button class="md-icon-button searchButton md-whiteframe-2dp" ng-click="$menubar.search()">
-        <i layout="fill" class="material-icons">search</i>
-      </md-button>
-      <form id="searchForm" autocomplete="off" ng-submit="$menubar.search()">
-        <md-input-container md-no-float class="search">
-          <input class="searchInput md-whiteframe-6dp" placeholder=" Search Twitter" type="text" ng-model="$menubar.$searchService.searchText" >
-        </md-input-container>
-      </form>
+    <md-button class="md-icon-button searchButton md-whiteframe-2dp" ng-click="$menubar.search()">
+      <i layout="fill" class="material-icons">search</i>
+    </md-button>
+    <form id="searchForm" autocomplete="off" ng-submit="$menubar.search()">
+      <md-input-container md-no-float class="search">
+        <input class="searchInput md-whiteframe-6dp" placeholder=" Search Twitter" type="text" ng-model="$menubar.$searchService.searchText" >
+      </md-input-container>
+    </form>
 
     </div>
   </md-toolbar>
