finally fixed check for null data in search

--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -4,10 +4,9 @@
       <md-tab-label>Hashtag</md-tab-label>
       <md-tab-body>
         <md-list flex="">
-          <md-list-item ng-hide="$search.$searchService.hashtag.data">No results found</md-list-item>
+          <md-list-item ng-hide="$search.$searchService.hashtag.data && $search.$searchService.hashtag.data.length > 0">No results found</md-list-item>
           <md-list-item class="md-3-line" ng-repeat="item in $search.$searchService.hashtag.data">
             <div class="md-list-item-text" layout="column">
-              <h2 ng-hide="$search.$searchService.hashtag.data">No results found</h2>
               <h3 ng-click="null">>{{ item.author.username }}</h3>
               <p>{{ item.content }}</p>
               <p>{{ item.posted }}</p>
@@ -27,7 +26,7 @@
       <md-tab-label>Author</md-tab-label>
       <md-tab-body>
         <md-list flex="">
-          <md-list-item ng-hide="$search.$searchService.author.data">No results found</md-list-item>
+          <md-list-item ng-hide="$search.$searchService.author.data && $search.$searchService.author.data.length > 0">No results found</md-list-item>
           <md-list-item class="md-3-line" ng-repeat="item in $search.$searchService.author.data">
             <div class="md-list-item-text" layout="column">
               <h3 ng-click="null">>{{ item.author.username }}</h3>
@@ -49,7 +48,7 @@
       <md-tab-label>Mentions</md-tab-label>
       <md-tab-body>
         <md-list flex="">
-          <md-list-item ng-hide="$search.$searchService.mentioned.data">No results found</md-list-item>
+          <md-list-item ng-hide="$search.$searchService.mentioned.data && $search.$searchService.mentioned.data.length > 0">No results found</md-list-item>
           <md-list-item class="md-3-line" ng-repeat="item in $search.$searchService.mentioned.data">
             <div class="md-list-item-text" layout="column">
               <h3 ng-click="null">>{{ item.author.username }}</h3>
