correct mainpage to show feeds and follows properly

--- a/src/app/mainpage/page/page.component.html
+++ b/src/app/mainpage/page/page.component.html
@@ -2,20 +2,5 @@
 
   <follow layout-align="center center" layout="column" flex="25" layout-fill class="md-padding"></follow>
 
-  <feed layout-align="center center" layout="column" flex="55" layout-fill class="md-padding">
-    <!-- <md-tabs md-dynamic-height md-border-bottom>
-      <md-tab id="tab1">
-        <md-tab-label>{{$page.state}}</md-tab-label>
-        <md-tab-body>
-          <ui-view></ui-view>
-        </md-tab-body>
-      </md-tab>
-      <md-tab id="tab2">
-        <md-tab-label>Mentions</md-tab-label>
-        <md-tab-body>
-          <mentions></mentions>
-        </md-tab-body>
-      </md-tab> -->
-    </md-tabs>
-  </feed>
+  <ui-view layout-align="center center" flex="55"layout-fill class="md-padding"></ui-view>
 </div>
