--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -1,12 +1,26 @@
-<md-content layout-fill>
-      <md-list flex>
-        <md-subheader class="md-no-sticky">3 line item (with hover)</md-subheader>
-        <md-list-item class="md-3-line" ng-repeat="item in todos" ng-click="null">
-          <div class="md-list-item-text" layout="column">
-            <h3>{{ users.username }}</h3>
-            <h4>{{ users.tweet }}</h4>
-            <p>{{ users.date }}</p>
-          </div>
-        </md-list-item>
-      </md-list>
-    </md-content>
+<md-content md-dynamic-height md-border-bottom layout-fill >
+  <md-tabs class="">
+      <md-tab id="tab1">
+        <md-tab-label>Feeds</md-tab-label>
+        <md-tab-body>
+          <md-list flex="">
+            <md-list-item ng-hide="$feed.$feedService.tweet.data">No results found</md-list-item>
+            <md-list-item class="md-3-line" ng-repeat="item in $feed.$feedService.tweet.data">
+              <div class="md-list-item-text" layout="column">
+                <h3 ng-click="null">>{{ item.author.username }}</h3>
+                <p>{{ item.content }}</p>
+                <p>{{ item.posted }}</p>
+                <!-- <div ng-show='item.inReplyTo'>
+                  <h3 ng-click="null">Reply From</h3>
+                </div>
+                <div ng-show='item.repostOf'>
+                  <h3 ng-click="null">Repost Of</h3>
+                </div> -->
+                </br>
+              </div>
+            </md-list-item>
+          </md-list>
+        </md-tab-body>
+    </md-tab>
+  </md-tabs>
+</md-content>
