--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -5,7 +5,7 @@
         <md-tab-body>
           <md-list flex="">
             <md-list-item ng-hide="$feed.$feedService.tweet.data">No results found</md-list-item>
-            <md-list-item class="md-3-line" ng-repeat="item in $feed.$feedService.tweet.data">
+            <md-list-item class="md-3-line" ng-repeat="item in $feed.$feedService.tweet.data()">
               <div class="md-list-item-text" layout="column">
                 <h3 ng-click="null">>{{ item.author.username }}</h3>
                 <p>{{ item.content }}</p>
