--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -31,7 +31,7 @@
             <div class="md-list-item-text md-whiteframe-2dp" layout="column">
               <h3 ng-click="null">>{{ item.author.username }}</h3>
               <p>{{ item.content }}</p>
-              <p>{{ item.posted }}</p>
+              <p>{{ item.posted * 1000 | date:'HH:mm:ss' }}</p>
               <div ng-show='item.inReplyTo'>
                 <h3 ng-click="null">Reply From</h3>
               </div>
@@ -53,7 +53,7 @@
             <div class="md-list-item-text md-whiteframe-2dp" layout="column">
               <h3 ng-click="null">>{{ item.author.username }}</h3>
               <p>{{ item.content }}</p>
-              <p>{{ item.posted }}</p>
+              <p>{{ item.posted * 1000 | date:'HH:mm:ss' }}</p>
               <div ng-show='item.inReplyTo'>
                 <h3 ng-click="null">Reply From</h3>
               </div>
