--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -15,6 +15,9 @@
               </div>
               <div ng-show='item.repostOf'>
                 <h3 ng-click="null">Repost Of</h3>
+                <h3>>{{item.repostOf.author.username}} </h3>
+                <p>{{ item.repostOf.content }}</p>
+                <p>{{ item.repostOf.posted * 1000 | date:'HH:mm:ss' }}</p>
               </div>
             </div>
             </br>
@@ -37,6 +40,9 @@
               </div>
               <div ng-show='item.repostOf'>
                 <h3 ng-click="null">Repost Of</h3>
+                <h3>>{{item.repostOf.author.username}} </h3>
+                <p>{{ item.repostOf.content }}</p>
+                <p>{{ item.repostOf.posted * 1000 | date:'HH:mm:ss' }}</p>
               </div>
             </div>
             </br>
@@ -59,6 +65,9 @@
               </div>
               <div ng-show='item.repostOf'>
                 <h3 ng-click="null">Repost Of</h3>
+                <h3>>{{item.repostOf.author.username}} </h3>
+                <p>{{ item.repostOf.content }}</p>
+                <p>{{ item.repostOf.posted * 1000 | date:'HH:mm:ss' }}</p>
               </div>
             </div>
             </br>
