--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -4,8 +4,8 @@
         <md-tab-label>Feeds</md-tab-label>
         <md-tab-body>
           <md-list flex="">
-            <!-- <md-list-item ng-hide="$feed.$feedService.getFeed()">No results found</md-list-item> -->
-            <md-list-item class="md-3-line" ng-init="$feed.$feedService.getFeed()" ng-repeat="item in $feed.$feedService.tweets">
+            <!-- <md-list-item ng-hide="$feed.$homeService.getFeed()">No results found</md-list-item> -->
+            <md-list-item class="md-3-line" ng-init="$feed.$homeService.getFeed()" ng-repeat="item in $feed.$homeService.tweets">
               <div class="md-list-item-text" layout="column">
                 <h3 ng-click="null">>{{ item.author.username }}</h3>
                 <p>{{ item.content }}</p>
