--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -4,10 +4,13 @@
         <md-tab-label>Feeds</md-tab-label>
         <md-tab-body>
           <md-list flex="">
-            <!-- <md-list-item ng-hide="$feed.$feedService.getFeed()">No results found</md-list-item> -->
-            <md-list-item class="md-3-line"
-
-            ng-repeat="item in $feed.getfeeds()">
+            <md-list-item ng-hide="$feed.$feedService.tweets  && $feed.$feedService.tweets.length > 0">No results found</md-list-item>
+            <md-list-item class="md-3-line" ng-init="$feed.getFeed()" ng-repeat="item in $feed.$feedService.tweets">
+              <div class="md-list-item-text" layout="column">
+                <h3 ng-click="null">>{{ item.author.username }}</h3>
+                <p>{{ item.content }}</p>
+                <p>{{ item.posted | date:'HH:mm:ss '  }}</p>
+            <md-list-item class="md-3-line" ng-repeat="item in $feed.getfeeds()">
               <div class="md-list-item-text" layout="column">
                 <h3 ng-click="null">>{{ item.author.username }}</h3>
                 <p>{{ item.content }}</p>
