--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Noto Sans;
+}
+
 .pageWidth {
   width: 90vw;
 }
@@ -14,6 +18,7 @@ margin-top: 68px;
   background-image: url('./app/global/resources/ocean-background.png');
   background-size: 100% 100%;
 }
+
 .login-tab {
   background-color: rgba(255, 255, 255, .5);
 }
@@ -37,6 +42,20 @@ margin-top: 68px;
 
 md-dialog {
   width: 80vw;
+}
+
+.profileButtonIcon {
+  margin-top: 5px;
+  float: left;
+  color: rgba(255,255,255,0.87);
+}
+
+md-button, .profileButtonText {
+  text-transform: none;
+  margin-left: 8px;
+  margin-right: 8px;
+  float: right;
+  color: white;
 }
 
 .tweetButton:hover {
