implemented stateService that handles changing state; also keeps track of current state.

--- a/src/app/mainpage/page/page.component.html
+++ b/src/app/mainpage/page/page.component.html
@@ -5,7 +5,7 @@
   <md-content md-dynamic-height md-border-bottom layout-fill >
     <md-tabs class="">
       <md-tab id="tab1">
-        <md-tab-label>{{$page.$currentStateService.currentTab}}</md-tab-label>
+        <md-tab-label>{{$page.$stateService.currentTab}}</md-tab-label>
         <md-tab-body>
           <ui-view></ui-view>
         </md-tab-body>
